--- a/src/app/content/carriers/index.module.css
+++ b/src/app/content/carriers/index.module.css
@@ -30,6 +30,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 1rem;
+    margin-bottom: 20rem;
 }
 
 .noCarrierSelected {
@@ -86,6 +88,11 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+    }
+
+    .noCarrier__container {
+        
+        margin-bottom: 0;
     }
 
     .sliderPosition {
