bug fixes styling

--- a/src/app/content/carriers/containers/slider/slider.module.css
+++ b/src/app/content/carriers/containers/slider/slider.module.css
@@ -96,6 +96,7 @@
         box-shadow: unset;
         justify-content: center;
         flex-direction: row;
+        padding: 0;
         
     
     }
