--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -65,82 +65,77 @@
 }
 
 
-@media only screen and (min-width:720px) {
+@media only screen and (min-width:720px) ,(min-height: 600px) {
     
         
-.active{
-    background-color: var(--colorBGMain);
-    border-radius:10rem;
-    width:4rem;
-    height:4rem;  
-    left:1.5rem;
-}
-
-.activeImage{
-    width:2.5rem;
-
-}
-
-.activeTR{
-    top:10vh;
-}
-.activeCH{
-    top:35vh;
-}
-.activeCA{
-    top:59vh;
-}
-.activeAC{
-    top:85vh;
-}
-
-
-.activeImageCenter{
-    top:20%;
-    left:20%;
-}
-
-    .wrapper{
-        display: flex;
-        flex-direction: column;
-        height:100vh;
+    .active{
+        background-color: var(--colorBGMain);
+        border-radius:10rem;
+        width:4rem;
+        height:4rem;  
+        left:1.5rem;
+    }
+    
+    .activeImage{
+        width:2.5rem;
+    
+    }
+    
+    .activeTR{
+        top:10vh;
+    }
+    .activeCH{
+        top:35vh;
+    }
+    .activeCA{
+        top:57vh;
+    }
+    .activeAC{
+        top:80vh;
+    }
+    
+    
+    .activeImageCenter{
+        top:20%;
+        left:20%;
+    }
+    
+        .wrapper{
+            display: flex;
+            flex-direction: column;
+            height:100vh;
+            
+            
+            justify-content: space-between;
+            align-items:center;
+        }
+        .container{
+            background-color: var(--colorBGDark);
+            display:flex;
+            justify-content:center;
+            align-items:space-evenly;
+            padding: 1rem 1rem;
+            height: 100vh;
+            width: 5rem;
+            position:static;
+        }
+        .navWrapper{
+            display:flex;
+            height: 100vh;
+            width: unset;
+            padding-top: 4rem;
+            padding-bottom: 2rem;
+            justify-content:space-between;
+            flex-direction:column;
+        }
+     }
+     @media only screen and (min-width:720px) and (min-height:800px) {
+    
+   
+        .activeAC{
+            top:84vh;
+        }
         
         
-        justify-content: space-between;
-        align-items:center;
-    }
-    .container{
-        background-color: var(--colorBGDark);
-        display:flex;
-        justify-content:center;
-        align-items:space-evenly;
-        padding: 1rem 1rem;
-        height: 100vh;
-        width: 5rem;
-        position:static;
-    }
-    .navWrapper{
-        display:flex;
-        height: 100vh;
-        width: unset;
-        padding-top: 4rem;
-        padding-bottom: 2rem;
-        justify-content:space-between;
-        flex-direction:column;
-    }
- }
- @media only screen and (min-width:1025px) {
-
-    .container{
-        background-color: var(--colorBGDark);
-        display:flex;
-        justify-content:center;
-        align-items:center;
-        padding: 1rem 1rem;
-        height: 100vh;
-        width: 5rem;
-        position: static;
-    }
-  
- }
-
+         }
+    
