--- a/src/app/content/apply/index.module.css
+++ b/src/app/content/apply/index.module.css
@@ -33,7 +33,6 @@
     margin-top: 2rem;
     margin-bottom: 4rem;
 }
-
 .underground{
     display:flex;
     flex-direction:column;
@@ -86,6 +85,10 @@
 }
 
 
+.specialWrapper{
+    margin-left:15vw;
+ }
+ 
 .underground {
     width: 40vw;
 }
