--- a/src/app/content/challenge/containers/assignment/assignment.module.css
+++ b/src/app/content/challenge/containers/assignment/assignment.module.css
@@ -20,6 +20,7 @@
 @media only screen and (min-width:1100px) {
     .assignment__container {
       padding-top: 0rem;
+      margin-left: 2rem;
     }
  }
 
