--- a/src/app/content/landing/containers/videoscreen/videoscreen.module.css
+++ b/src/app/content/landing/containers/videoscreen/videoscreen.module.css
@@ -41,7 +41,7 @@ width: calc(5rem + 2vw);
 .videoContainer{
     position: absolute;
     top: -50%;
-    left: -50%;
+    left: -40%;
     width: 200%;
     height: 200%;
 }
@@ -50,6 +50,20 @@ width: calc(5rem + 2vw);
   
     .videoContainer{
         width: 20%;
+        left: -50%;
+    }
+
+    .videoBG{
+        position: absolute;
+        width:200vw;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        margin: auto;
+        min-height: 50%;
+        min-width: 50%;
+        z-index:-1;
     }
  }
 
