--- a/src/app/content/tracker/mapbox/Livechat/Livechat.module.css
+++ b/src/app/content/tracker/mapbox/Livechat/Livechat.module.css
@@ -33,8 +33,8 @@
 .messages {
     height: 75vh;
 
-    overflow: auto;
-    overscroll-behavior-y:contain;
+    overflow: hidden;
+    overscroll-behavior-y: scroll;
     
 }
 
@@ -48,15 +48,17 @@
     .livechat__container {
         width: 30rem;
         position: fixed;
+        overflow: hidden;
     
     }
 
     .messages {
 
         height: 85vh;
-        display:flex;
-        flex-direction:column;
-        justify-content:flex-end;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        overflow: hidden;
         overflow: scroll;
 
     
