--- a/src/app/content/landing/containers/login/login.module.css
+++ b/src/app/content/landing/containers/login/login.module.css
@@ -1,11 +1,12 @@
 .login__container{
     width:100%;
-    height:90%;
-    display:flex;
-    justify-content:center;
+    height:100vh;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 .login{
-    width:80%;
+    width:100%;
+    height: 100vh;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -30,7 +31,7 @@ flex-direction: column;
 
 @media only screen and (min-width:1400px) {
     .login{
-        width:70%;
+        width:100%;
         display:flex;
         flex-direction:column;
         justify-content:center;
