--- a/src/app/content/landing/containers/register/register.module.css
+++ b/src/app/content/landing/containers/register/register.module.css
@@ -1,11 +1,13 @@
 .register__container{
     width:100%;
-    height:90%;
-    display:flex;
-    justify-content:center;
+    height:100vh;
+    overflow: hidden;
+    overflow-y: scroll;
+    
 }
 .register{
-    width:80%;
+    width:100%;
+    height: 100vh;
     display:flex;
     flex-direction:column;
     justify-content:center;
