--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -7,6 +7,12 @@
     width: 0;
 }
 
+.nocarrierselectedTrackingPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 
 .personalInformation {
